# qt_calculator

./: CMakeLists.txt  button.cpp  button.h  calculator.cpp  calculator.h  main.cpp
